syntax = "proto3";

package syft.core.node.common.service;

import "proto/core/common/common_object.proto";
import "proto/core/common/recursive_serde.proto";

message GetReprMessage {
  syft.core.common.UID msg_id = 1;
  syft.core.common.RecursiveSerde address = 2;
  syft.core.common.RecursiveSerde reply_to = 3;
  syft.core.common.UID id_at_location = 4;
}

message GetReprReplyMessage {
  syft.core.common.UID msg_id = 1;
  syft.core.common.RecursiveSerde address = 2;
  string repr = 3;
}
