syntax = "proto3";

package syft.core.node.common.service;

import "proto/core/common/common_object.proto";
import "proto/core/common/recursive_serde.proto";

message ReprMessage {
  syft.core.common.UID msg_id = 1;
  syft.core.common.RecursiveSerde address = 2;
}
